# NOTE:
# 1. for display continuity sake please use 2 spaces instead of tabs
# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2017-11-17 Matthias Scholz <ms@jammerhund.de>
  * added methods for handling multiple ApplicationExitHandler in the
    WorkbenchFrame. Set the old getApplicationExitHandler() and
    setApplicationExitHandler() methods deprecated.
  * ConnectionManager adjusted for the new ApplicationExitHandler stuff.

2017-11-13 Giuseppe Aruta. 
  * RasterImageLayer <Sextante>: Spatial reference system srid and its location 
    are now stored as metadata on loading file. Updated Raster Info plugin.

2017-11-12 mmichaud <m.michael.michaud@orange.fr>
  * Add z-interpolation to remodeler tool

2017-11-12 Giuseppe Aruta. ExportLayerableEnvelopeAsGeometryPlugIn
  * Bug corrected. Added output of srid for Layer and RasterImageLayer

2017-11-11 mmichaud <m.michael.michaud@orange.fr>
  * Add a Arcgis-like remodeler tool in editing toolbox

2017-11-10 Giuseppe Aruta
  * Upgraded CadTools Extension to version 0.4:
    - added Block and Annotation tools and 
    - added more line decoration for layer style
  * Enhenced Warp panel plugin adding affine and projective transformation

2017-11-07 Giuseppe Aruta
  * Add ShowCenterView plugin: it shows a red crosshair in the center of 
    the view. See Feature request #201 "Add crosshair to synchonised projects"
 
2017-11-05 mmichaud <m.michael.michaud@orange.fr>
  * Start support of prj file through crs library

2017-10-25 Giuseppe Aruta
  * Upgraded CadTools to version 0.3 - Feature request #257:
    CAD tools to show area in real time when drawing closed geometries. 
   - added area, perimeter and other info display to circle, parallelogram
     and elliple tools

2017-10-24 Matthias Scholz <ms@jammerhund.de>
  * small multimonitor fix: place some popups during closing OpenJUMP or a